--- a/styles.css
+++ b/styles.css
@@ -3,32 +3,11 @@
     font-family: 'Roboto', sans-serif;
 }
 
-header{
-    background-color: #1f2937;
-    
-    
-}
-
-
 nav{
     padding: 30px;
     height: 100px;
     display: flex;
     justify-content: space-around;
-}
-
-.logo{
-    font-size: 24px;
-}
-
-a{
-    text-decoration: none;
-    color: #F9FAF8;
-    transition: 0.1s;
-}
-
-a:hover{
-    opacity: 0.7;
 }
 
 li{
@@ -37,58 +16,6 @@ li{
     display: flex;
     font-size: 18px;
     color: #E5E7EB;
-}
-
-ul{
-    display: flex;
-}
-
-.This{
-    color: #F9FAF8;
-    font-size: 50px;
-}
-
-.header-section{
-    justify-content: space-around;
-    display: flex;
-}
-
-.website{
-    padding-left: 10%;
-    width: 33%;
-    font-size: 18px;
-    color: #E5E7EB;
-    transform: translate(0,-260%);
-}
-
-.image p {
-    color:#F9FAF8;
-    justify-content: center;
-    text-align: center;
-}
-
-.image{
-    background-color: grey;
-    color: white;
-    padding: 10%;
-    
-}
-
-.botao{
-    border: none;
-    border-radius: 3px;
-    padding: 20px;
-    color: white;
-    background-color: #3882F6;
-    width: 155px;
-    font-size: 19px;
-    transform: translate(90%,-225%);
-    transition: 0.2s;
-    cursor: pointer;
-}
-
-.botao:hover{
-    background-color: #1f72f8;
 }
 
 .some{
@@ -153,38 +80,33 @@ section .cu{
     padding-left: 20px;
 }
 
-p .website{
-    text-align: center;
-    color: grey;
-}
-
 .section3{
     background-color: #E5E7EB;
     height: 290px;
-      
+    justify-content: center;
+    vertical-align: middle;      
 }
 
 .sim{
     justify-content: center;
-    font-size: 36px;
-    color: #1F2937;
-    display: flex;
+    text-align: center;
     font-style: italic;
+    display: flex;
+    font-size: 30px;
+    height: 85%; 
+    align-items: center; 
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .little{
-    justify-content: end;
     font-size: 29px;
-    color: #1f2937;
-    display: flex;
-    
 }
 
 .insp{
-    padding-top: 50px;
-    width: 50%;
-    margin-right: 25%;
-    margin-left: 25%;
+    vertical-align: middle;
+    text-align: center;
+    padding: 50px 0px;
 }
 
 
@@ -202,7 +124,6 @@ p .website{
 header{
     background-color: #1f2937;
     height: 560px;
-    
     
 }
 
@@ -271,6 +192,7 @@ li{
     position: relative;
     display: block;
     width: 590px;
+    margin-left: 3%;
     background-color: gray;
     justify-content: end;
     right: 0;
